--- a/playbooks/convert.yml
+++ b/playbooks/convert.yml
@@ -5,10 +5,10 @@
   become: true
   force_handlers: true
   vars:
-    rhsm_username: MY_USERNAME
-    rhsm_password: MY_PASSWORD
-    rhsm_org: MY_ORG
-    rhsm_activation_key: MY_ACTIVATION_KEY
+    rhsm_username: raul.mejia@guzdan.com
+    rhsm_password: R5awu8lp.2023!
+    rhsm_org: 17132790
+    rhsm_activation_key: conver2rhel
 
   tasks:
     - name: Perform OS conversion
